// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google_cct;

option java_package = "com.google.firebase.encoders.proto";
option java_multiple_files = true;

message Hello {
  int32 my_int = 1;
  string str = 2;
  repeated World world = 3;

  message World {
    bool my_bool = 1;
    map<string, int32> my_map = 2;
    HeyHey hey_hey = 3;
  }

  message HeyHey {
    string bar = 1;
  }
}